--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  width: 100%;
 }
 .logo {
   display: flex;
@@ -41,7 +42,7 @@
 }
 .dashboard-details {
   display: flex;
-  margin-top: 0;
+  margin-top: 0 auto;
 }
 .sidebar {
   display: flex;
@@ -103,11 +104,5 @@
   }
   .greater {
     display: none;
-  }
-  .dashboard {
-    /* width: 100%; */
-  }
-  .header {
-    /* width: 100%; */
   }
 }
