--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -6,22 +6,18 @@
   align-items: center;
   padding: 10px;
 }
-.logoH {
+.header-logo {
   display: flex;
   align-items: center;
   justify-content: center;
   text-transform: uppercase;
 }
-.logoH > img {
+.header-logo > img {
   width: 30px;
   border-radius: 8px;
-  margin-right: 10px;
+  padding-right: 10px;
 }
-.menu {
-  display: none;
-  width: 30px !important;
-  height: 30px !important;
-}
+
 .header-side {
   display: flex;
   justify-content: space-between;
@@ -52,7 +48,6 @@
 }
 .right_side {
   flex: 0.8;
-  /* height: 80%; */
   margin-left: 20px;
   background-color: #45a049;
 }
@@ -89,11 +84,21 @@
   border-bottom-left-radius: 16px;
 }
 @media screen and (max-width: 800px) {
-  .sidebar {
-    display: none;
+  .dashboard-details {
+    flex-direction: column;
   }
-  .sidebar.visible {
-    display: block;
+  .sidebar {
+    margin-top: 20px;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .sidebar > ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .sidebar > ul > li > button {
+    /* margin-left: 0px; */
+    font-size: 10px;
   }
   .right_side {
     margin: 0 auto;
