--- a/src/components/consultation.css
+++ b/src/components/consultation.css
@@ -51,3 +51,12 @@
   float: right;
 }
 /* Add additional styling as needed */
+
+@media screen and (max-width: 600px) {
+  .search {
+    align-items: center;
+  }
+  .search > input {
+    width: 40%;
+  }
+}
