--- a/src/components/dashboard.css
+++ b/src/components/dashboard.css
@@ -83,6 +83,11 @@
   border-top-left-radius: 16px;
   border-bottom-left-radius: 16px;
 }
+footer {
+  padding: 20px;
+  color: #fff;
+  font-size: 16px;
+}
 @media screen and (max-width: 800px) {
   .dashboard-details {
     flex-direction: column;
