--- a/src/components/patientDetails.css
+++ b/src/components/patientDetails.css
@@ -30,7 +30,7 @@
   text-wrap: wrap;
 }
 .scroll-button {
-  max-width: 500px; /* Set the desired width */
+  max-width: 800px; /* Set the desired width */
   max-height: 400px; /* Set the desired height */
   overflow-y: auto; /* Enable vertical scrollbar */
   border: 1px solid #ccc; /* Add a border for visibility */
@@ -39,6 +39,35 @@
   padding: 10px;
   margin: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.image-container {
+  position: relative;
+  cursor: pointer;
+}
+
+.small-image {
+  max-width: 100%;
+  max-height: 200px;
+  transition: transform 0.3s ease; /* Add a smooth transition for the transform property */
+}
+
+.large-image {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  transform: scale(2); /* Adjust the scale factor as needed */
+  z-index: 200;
+}
+
+.image-container:hover .small-image {
+  transform: scale(2); /* Adjust the scale factor on hover */
+}
+
+.image-container:hover .large-image {
+  display: block;
 }
 @media screen and (max-width: 800px) {
   .scroll-button {
